# freecell4cli

./: Board.cpp  Board.h  CMakeLists.txt  Card.cpp  Card.h  CardCollection.h  Command.cpp  Command.h  Console.cpp  Console.h  Constants.h  Curses.cpp  Curses.h  Deck.cpp  Deck.h  Freecell.h  GameScreen.cpp  GameScreen.h  HelpScreen.h  Helper.cpp  Helper.h  Homecell.h  Input.cpp  Input.h  MoveCommand.h  Output.cpp  Output.h  Painter.cpp  Painter.h  PlayArea.cpp  PlayArea.h  Prompt.h  README.md  Screen.h  StdIn.h  StdOut.cpp  StdOut.h  ValidMoveCommand.h  color.c  color2.c  (+3 more)
Curses/: Curses.cpp  Curses.h  GameScreen.cpp  HelpScreen.cpp  Prompt.cpp
LibCard/: CMakeLists.txt  Card.cpp  Card.h  CardCollection.h  Deck.cpp  Deck.h
Std/: GameScreen.cpp  HelpScreen.cpp  Prompt.cpp
